# llm-rest-api

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  main.py  pyproject.toml  start.sh
src/: __init__.py  constants.py  exceptions.py
src/api/: app.py  dependencies.py  routes.py
src/config/: logging_config.py  settings.py
src/interfaces/: document_processor.py  llm_provider.py
src/models/: schemas.py
src/services/: document_service.py  llm_service.py  ollama_provider.py  pdf_processor.py  provider_factory.py
tests/: example_model_switching.py  performance_test.py  test_client.py  test_model_not_found.py  test_pdf_curl.sh  test_pdf_questions.py  test_quick.py
